--- a/docs/rappport/sections/detectors.tex
+++ b/docs/rappport/sections/detectors.tex
@@ -95,8 +95,7 @@ Dans le cas de Harris, cette dilatation morphologique est utilisée pour
 détecter les maxima locaux puis faire la suppression des non-maxima.
 Autrement dit, l'objectif est de garder les pics (les coins) les plus forts.
 
-Dans le code de \texttt{Harris.py}, dans la section commentée
-\texttt{"2. Calcul des maxima locaux et seuillage + temporisation"},
+Dans le code de \texttt{Harris.py},
 la variable \texttt{se} définit la fenêtre/le voisinage comme une matrice
 de 1 de taille \texttt{d\_maxloc}, avec \texttt{d\_maxloc = 3} :
 
@@ -132,3 +131,147 @@ Theta_maxloc[
     Theta < seuil_relatif * Theta.max()
 ] = 0.0
 \end{verbatim}
+
+\subsection{Résultats}
+
+Le script \texttt{Harris.py} a été exécuté 50 fois avec \texttt{-stats}
+sur l'image \texttt{Graffiti0.png}. Les mesures suivantes ont été obtenues.
+Les résultats ci-dessous ont été mesurés avec les paramètres suivants :
+
+\begin{verbatim}
+SUM_WINDOW_SIZE = 5
+HARRIS_K = 0.04
+MAXLOC_NEIGHBORHOOD_SIZE = 3
+RELATIVE_THRESHOLD = 0.01
+\end{verbatim}
+
+\begin{itemize}
+    \item Dimension de l'image (niveau de gris) : $320 \times 400$.
+    \item Type de l'image (niveau de gris) : \texttt{float64}.
+    \item Dimension de l'image (couleur) : $320 \times 400 \times 3$.
+    \item Type de l'image (couleur) : \texttt{uint8}.
+\end{itemize}
+
+\begin{table}[H]
+    \centering
+    \caption{Statistiques sur 50 exécutions du détecteur de Harris}
+    \label{tab:harris_stats}
+    \begin{tabular}{lc}
+        \hline
+        Métrique & Valeur \\
+        \hline
+        Temps moyen [s] & 0.003224673 \\
+        Variance du temps [s$^2$] & 0.000002632168 \\
+        Écart-type du temps [s] & 0.001622396 \\
+        Cycles/pixel moyen [cpp] & 25.192756 \\
+        Variance cycles/pixel [cpp$^2$] & 160.654768461 \\
+        Écart-type cycles/pixel [cpp] & 12.674966 \\
+        \hline
+    \end{tabular}
+\end{table}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth]{../../results/harris_points.png}
+    \caption{Visualisation des points d'intérêt détectés par Harris sur \texttt{Graffiti0.png}.}
+    \label{fig:harris_points}
+\end{figure}
+
+\subsection{Analyse Paramétrique du Détecteur de Harris}
+
+Cette étude paramétrique a été réalisée avec la commande
+\texttt{python Harris.py -stats 50 -plots}. L'échantillon correspond à
+50 exécutions du calcul de Harris pour chaque valeur testée.
+Pendant chaque balayage, les autres paramètres restent fixés à :
+\texttt{SUM\_WINDOW\_SIZE = 5}, \texttt{HARRIS\_K = 0.04},
+\texttt{MAXLOC\_NEIGHBORHOOD\_SIZE = 3},
+\texttt{RELATIVE\_THRESHOLD = 0.01}.
+
+\begin{figure}[H]
+    \centering
+    \begin{minipage}[t]{0.48\linewidth}
+        \centering
+        \includegraphics[width=\linewidth]{../../results/plots/harris/cpp_vs_sum_window_size.png}
+        \vspace{2mm}
+        \textbf{(a)} Cycles/pixel vs \texttt{SUM\_WINDOW\_SIZE}
+    \end{minipage}
+    \hfill
+    \begin{minipage}[t]{0.48\linewidth}
+        \centering
+        \includegraphics[width=\linewidth]{../../results/plots/harris/time_vs_sum_window_size.png}
+        \vspace{2mm}
+        \textbf{(b)} Temps moyen vs \texttt{SUM\_WINDOW\_SIZE}
+    \end{minipage}
+    \caption{Impact de \texttt{SUM\_WINDOW\_SIZE} sur le coût de calcul.}
+    \label{fig:harris_sum_window_analysis}
+\end{figure}
+
+Quand \texttt{SUM\_WINDOW\_SIZE} augmente, le temps moyen et les cycles/pixel
+augmentent nettement, car la convolution locale est plus coûteuse.
+Du point de vue détection, une grande fenêtre stabilise la mesure de structure
+(moins sensible au bruit), mais tend à lisser les détails fins et à réduire
+le nombre de coins faibles détectés. À l'inverse, une petite fenêtre capte plus
+de micro-variations (plus de coins potentiels), au prix d'une sensibilité plus forte
+au bruit et donc d'un risque accru de faux positifs.
+
+\begin{figure}[H]
+    \centering
+    \begin{minipage}[t]{0.48\linewidth}
+        \centering
+        \includegraphics[width=\linewidth]{../../results/plots/harris/cpp_vs_harris_k.png}
+        \vspace{2mm}
+        \textbf{(a)} Cycles/pixel vs \texttt{HARRIS\_K}
+    \end{minipage}
+    \hfill
+    \begin{minipage}[t]{0.48\linewidth}
+        \centering
+        \includegraphics[width=\linewidth]{../../results/plots/harris/time_vs_harris_k.png}
+        \vspace{2mm}
+        \textbf{(b)} Temps moyen vs \texttt{HARRIS\_K}
+    \end{minipage}
+    \caption{Impact de \texttt{HARRIS\_K} sur le coût de calcul.}
+    \label{fig:harris_k_analysis}
+\end{figure}
+
+La variation de \texttt{HARRIS\_K} modifie peu le coût (même pipeline de calcul,
+mêmes opérateurs principaux), ce qui est cohérent avec les courbes de temps/CPP.
+En revanche, l'effet sur la sélection des coins est important :
+un \texttt{HARRIS\_K} faible est plus permissif (plus de points retenus, y compris
+des points ambigus proches des bords), tandis qu'un \texttt{HARRIS\_K} élevé
+renforce la pénalisation de la trace, donc la sélection devient plus stricte
+et le nombre de coins tend à diminuer, avec une meilleure stabilité géométrique.
+
+\begin{figure}[H]
+    \centering
+    \begin{minipage}[t]{0.48\linewidth}
+        \centering
+        \includegraphics[width=\linewidth]{../../results/plots/harris/cpp_vs_maxloc_neighborhood_size.png}
+        \vspace{2mm}
+        \textbf{(a)} Cycles/pixel vs taille du voisinage NMS
+    \end{minipage}
+    \hfill
+    \begin{minipage}[t]{0.48\linewidth}
+        \centering
+        \includegraphics[width=\linewidth]{../../results/plots/harris/time_vs_maxloc_neighborhood_size.png}
+        \vspace{2mm}
+        \textbf{(b)} Temps moyen vs taille du voisinage NMS
+    \end{minipage}
+    \caption{Impact de la taille du voisinage NMS sur le coût de calcul.}
+    \label{fig:harris_maxloc_analysis}
+\end{figure}
+
+Quand \texttt{MAXLOC\_NEIGHBORHOOD\_SIZE} augmente, le coût augmente de manière
+modérée, car la dilatation/non-max suppression parcourt un voisinage plus large.
+Ce paramètre agit surtout sur la densité finale des points :
+un voisinage grand rend la suppression non-maxima plus agressive
+(moins de coins, mieux espacés, moins redondants), tandis qu'un voisinage petit
+laisse passer plus de maxima locaux proches les uns des autres
+(plus de coins, mais plus de redondance spatiale).
+
+En synthèse, il existe un compromis classique entre sensibilité et robustesse :
+augmenter la sensibilité aux détails produit souvent plus de coins, mais aussi
+plus de bruit et de faux coins ; renforcer la robustesse réduit les faux positifs,
+mais peut éliminer des coins faibles utiles pour certaines scènes.
+Pour ce jeu d'images, la configuration de base
+(\texttt{SUM\_WINDOW\_SIZE} = 5, \texttt{HARRIS\_K} = 0.04,
+voisinage NMS = 3) reste un compromis raisonnable.
