--- a/docs/rappport/rap.tex
+++ b/docs/rappport/rap.tex
@@ -12,17 +12,23 @@
 \title{Implémentation du jeu Hex via la Programmation Orientée Objet et stratégies de décision en C++}
 
 \author{
-    \IEEEauthorblockN{1\textsuperscript{st} Jair Anderson Vasquez Torres}
+    \IEEEauthorblockN{1\textsuperscript{st} Santiago Florido Gomez}
     \IEEEauthorblockA{\textit{Ingénieur Degree Programme STIC} \\
     \textit{ENSTA Paris}\\
     Paris, France \\
-    jair-anderson.vasquez@ensta.fr}
+    santiago.florido@ensta.fr}
     \and
-    \IEEEauthorblockN{2\textsuperscript{nd} Santiago Florido Gomez}
+    \IEEEauthorblockN{2\textsuperscript{nd} Javier Andres Tarazona Jimenez}
     \IEEEauthorblockA{\textit{Ingénieur Degree Programme STIC} \\
     \textit{ENSTA Paris}\\
     Paris, France \\
-    santiago.florido@ensta-paris.fr}
+    javier-andres.tarazona@ensta.fr}
+    \and
+    \IEEEauthorblockN{3\textsuperscript{rd} Santiago Florido Gomez}
+    \IEEEauthorblockA{\textit{Ingénieur Degree Programme STIC} \\
+    \textit{ENSTA Paris}\\
+    Paris, France \\
+    santiago.florido@ensta.fr}
 }
 
 \maketitle
